remove 5 test files

--- a/build.xml
+++ b/build.xml
@@ -15,6 +15,7 @@
 	<property name="log.config" value="resources/log4j.properties"/>
 	<property name="www" value="./resources/test/www"/>
 	<property name="server" value="./pyServer.sh"/>
+	<property name="download.dir" value="./resources/test/Carlos Schwarz"/>
 
 	<target name="all" depends="build, jar"/>
 
@@ -61,6 +62,7 @@
             <fileset dir="${build.dir}"/>
             <fileset dir="${test.build.dir}"/>
             <fileset dir="${test.reports.dir}"/>
+            <fileset dir="${download.dir}"/>
         </delete>
         <javac srcdir="${src.dir}"
                destdir="${build.dir}"
@@ -71,12 +73,13 @@
         <javac srcdir="${test.src.dir}"
                destdir="${test.build.dir}"
                debug="on"
-               classpath="${build.dir}:${junit.jar}"
+               classpath="${build.dir}:${junit.jar}:${log4j.jar}"
                source="1.6" />
 
+        <copy file="${log.config}" todir="./build"/>
         <exec dir="${www}" executable="${server}"/>
 
-        <junit printsummary="yes" haltonfailure="no">
+        <junit printsummary="yes" haltonfailure="no" logfailedtests="yes">
             <classpath>
                 <pathelement location="${test.build.dir}"/>
                 <pathelement location="${build.dir}"/>
